--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.16.0",
+    "gh-pages": "^6.1.1",
     "react-snap": "^1.23.0"
   }
 }
