--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,9 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Kiran Devadas",
+  "name": "Kiran Devadas - Portfolio Website",
+  "version": "1.0",
+  "description": "Description of your app",
+  "manifest_version": 2,
   "icons": [
     {
       "src": "favicon.ico",
