--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,9 @@
 {
   "compilerOptions": {
-    "baseUrl": "src"
+    "baseUrl": "src",
+    "paths": {
+      "@assets/*": ["src/assets/*"]
+    }
   },
   "include": ["src"]
 }
