--- a/package.json
+++ b/package.json
@@ -11,21 +11,21 @@
     "http-server": "^14.1.1",
     "lg-zoom": "^1.3.0",
     "lightgallery": "^2.7.2",
-    "node-sass": "^7.0.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-grid-gallery": "^1.0.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
+    "sass": "^1.77.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "predeploy": "npm run build",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject",
+    "predeploy": "react-scripts build",
     "postbuild": "react-snap --timeout=60000"
   },
   "eslintConfig": {
@@ -48,7 +48,9 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.16.0",
+    "customize-cra": "^1.0.0",
     "gh-pages": "^6.1.1",
+    "react-app-rewired": "^2.2.1",
     "react-snap": "^1.23.0"
   }
 }
